// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change head content when pulling down 1`] = `
<div class="ms-pull-refresh">
  <div class="ms-pull-refresh__track" style="transform: translate3d(0,20px, 0);">
    <div class="ms-pull-refresh__head">
      <!----> <span class="ms-pull-refresh__text">下拉即可刷新...</span>
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`change head content when pulling down 2`] = `
<div class="ms-pull-refresh">
  <div class="ms-pull-refresh__track" style="transform: translate3d(0,75px, 0);">
    <div class="ms-pull-refresh__head">
      <!---->
      <!----> <span class="ms-pull-refresh__text">释放即可刷新...</span>
      <!---->
    </div>
  </div>
</div>
`;

exports[`change head content when pulling down 3`] = `
<div class="ms-pull-refresh">
  <div class="ms-pull-refresh__track" style="transform: translate3d(0,50px, 0);">
    <div class="ms-pull-refresh__head">
      <!---->
      <!---->
      <!---->
      <div class="ms-pull-refresh__loading">
        <div class="ms-loading ms-loading--circular ms-loading" style="color: rgb(201, 201, 201);"><span class="ms-loading__spinner ms-loading__spinner--circular"> <svg viewBox="25 25 50 50" class="ms-loading__circular"><circle cx="50" cy="50" r="20" fill="none"></circle></svg></span></div> <span>加载中...</span>
      </div>
    </div>
  </div>
</div>
`;

exports[`change head content when pulling down 4`] = `
<div class="ms-pull-refresh">
  <div class="ms-pull-refresh__track" style="transform: translate3d(0,50px, 0);">
    <div class="ms-pull-refresh__head">
      <!---->
      <!---->
      <!---->
      <div class="ms-pull-refresh__loading">
        <div class="ms-loading ms-loading--circular ms-loading" style="color: rgb(201, 201, 201);"><span class="ms-loading__spinner ms-loading__spinner--circular"> <svg viewBox="25 25 50 50" class="ms-loading__circular"><circle cx="50" cy="50" r="20" fill="none"></circle></svg></span></div> <span>加载中...</span>
      </div>
    </div>
  </div>
</div>
`;

exports[`change head content when pulling down 5`] = `
<div class="ms-pull-refresh">
  <div class="ms-pull-refresh__track" style="transform: translate3d(0,0px, 0);">
    <div class="ms-pull-refresh__head">
      <!---->
      <!---->
      <!---->
    </div>
  </div>
</div>
`;

exports[`not in page top 1`] = `
<div class="ms-pull-refresh">
  <div class="ms-pull-refresh__track" style="transform: translate3d(0,0px, 0);">
    <div class="ms-pull-refresh__head">
      <!---->
      <!---->
      <!---->
    </div>
  </div>
</div>
`;
